--- a/cards.html
+++ b/cards.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Card-Product || Details</title>
-    <link rel="shortcut icon" type="image/png" href="../image/logo.webp" />
+    <title>Card-Product || Laptop</title>
+    <link rel="shortcut icon" type="image/png" href="image/logo.webp" />
 
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/all.css" />
-    <link rel="stylesheet" href="../boot/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/all.css" />
+    <link rel="stylesheet" href="boot/bootstrap.min.css" />
   </head>
   <body>
     <header class="p-3 bg-dark text-white">
@@ -17,7 +17,7 @@
           class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
         >
         <img
-        src="../image/laptop-logo-png.png"
+        src="image/laptop-logo-png.png"
         alt=""
         style="width: 50px; height: 50px"
       />
@@ -55,7 +55,7 @@
               </li>
               <li>
                 <button class="btn btn-warning">
-                  <a href="../html/register.html">Sign up</a>
+                  <a href="html/register.html">Sign up</a>
                 </button>
               </li>
             </ul>
@@ -82,11 +82,13 @@
     </header>
 
     <div class="container home">
-      <div class="row details-pro"></div>
+      <div class="product-item col-sm-12 row mx-2 my-5"></div>
+      <div class="noproducts text-warning">NO PRODUCTS</div>
     </div>
 
-    <link rel="stylesheet" href="../boot/bootstrap.bundle.min.js" />
-    <script src="../js/details.js"></script>
-    <script src="../js/user.js"></script>
+    <link rel="stylesheet" href="boot/bootstrap.bundle.min.js"/>
+    <script src="js/cards.js"></script>
+    <script src="js/user.js"></script>
+    <script src="js/products.js"></script>
   </body>
 </html>
