--- a/login.html
+++ b/login.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Card-Product || Register</title>
-    <link rel="shortcut icon" type="image/png" href="../image/logo.webp" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/all.css" />
-    <link rel="stylesheet" href="../boot/bootstrap.min.css" />
+    <title>Card-Product || Login</title>
+    <link rel="shortcut icon" type="image/png" href="image/logo.webp" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/all.css" />
+    <link rel="stylesheet" href="boot/bootstrap.min.css" />
   </head>
   <body>
     <header class="p-3 bg-dark text-white">
@@ -16,7 +16,7 @@
           class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
         >
           <img
-            src="../image/laptop-logo-png.png"
+            src="image/laptop-logo-png.png"
             alt=""
             style="width: 50px; height: 50px"
           />
@@ -46,16 +46,10 @@
             <!-- <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li> -->
             <li><a href="#" class="nav-link px-2 text-white">About</a></li>
           </ul>
-          <!--   
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-            <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-          </form>
-   -->
           <div class="text-end">
-            <a href="login.html"
-              ><button type="button" class="btn btn-warning">Login</button></a
+            <a href="register.html"
+              ><button type="button" class="btn btn-warning">Sign-up</button></a
             >
-            <!-- <a href="register.html"><button type="button"  class="btn btn-warning">Sign-up</button></a> -->
           </div>
         </div>
       </div>
@@ -65,30 +59,28 @@
       <div class="words col-sm-6 col-6">
         <h2 class="get">Get Started Now</h2>
         <input type="text" placeholder="Enter your name" id="username" />
-        <input type="email" placeholder="Enter your email" id="email" />
         <input
           type="password"
           placeholder="Enter your password"
           id="password"
         />
-        <input type="submit" value="Sign up" id="signup" />
+        <input type="submit" value="Sign in" id="signin" />
         <div class="div">
           <p>OR</p>
-          <p>Have An Account</p>
+          <p>You Dont Have An Account?</p>
           <button type="button" class="btn btn-dark">
             <a
-              href="login.html"
+              href="register.html"
               class="text-light"
               style="text-decoration: none"
-              >Log In</a
+              >Sign Up</a
             >
           </button>
         </div>
       </div>
-      <div class="bgphoto col-sm-6 col-6"></div>
+      <div class="bggphoto col-sm-6 col-6"></div>
     </div>
-
-    <link rel="stylesheet" href="..boot/bootstrap.bundle.min.js" />
-    <script src="../js/register.js"></script>
+    <link rel="stylesheet" href="boot/bootstrap.bundle.min.js" />
+    <script src="js/login.js"></script>
   </body>
 </html>
