--- a/cards.html
+++ b/cards.html
@@ -87,8 +87,8 @@
     </div>
 
     <link rel="stylesheet" href="boot/bootstrap.bundle.min.js"/>
-    <script src="js/cards.js"></script>
-    <script src="js/user.js"></script>
-    <script src="js/products.js"></script>
+    <script src="/js/cards.js"></script>
+    <script src="/js/user.js"></script>
+    <script src="/Js/products.js"></script>
   </body>
 </html>
