--- a/details.html
+++ b/details.html
@@ -85,8 +85,8 @@
       <div class="row details-pro"></div>
     </div>
 
-    <link rel="stylesheet" href="boot/bootstrap.bundle.min.js" />
-    <script src="js/details.js"></script>
-    <script src="js/user.js"></script>
+    <link rel="stylesheet" href="/boot/bootstrap.bundle.min.js" />
+    <script src="/js/details.js"></script>
+    <script src="/js/user.js"></script>
   </body>
 </html>
