--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     </div>
 
     <link rel="stylesheet" href="boot/bootstrap.bundle.min.js" />
-    <script src="js/products.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/user.js"></script>
+    <script src="/js/products.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/user.js"></script>
   </body>
 </html>
 
