--- a/login.html
+++ b/login.html
@@ -81,6 +81,6 @@
       <div class="bggphoto col-sm-6 col-6"></div>
     </div>
     <link rel="stylesheet" href="boot/bootstrap.bundle.min.js" />
-    <script src="js/login.js"></script>
+    <script src="/js/login.js"></script>
   </body>
 </html>
