--- a/register.html
+++ b/register.html
@@ -89,6 +89,6 @@
     </div>
 
     <link rel="stylesheet" href="boot/bootstrap.bundle.min.js" />
-    <script src="js/register.js"></script>
+    <script src="/js/register.js"></script>
   </body>
 </html>
